- regex grammar: added <rule: string...> and <rule( params, ... ) syntax
- new ast node 'call'
- rules can have positional parameters
- "Whatever" {*}
- fixed ratchet quantifier - rollback .pos on fail
- added an initial double-quoted parser
- allow aliasing to a literal

- new syntax 'xxx' instead of <'xxx'>
- %($/) is read-write

0.22  2007-03-27

- fixed perl5.10 compatibility
- some fixes to character classes
- fixed bug: Pugs::Grammar::Base try to autoload DESTROY()

0.21  2007-03-12

- added external/internal 'ignorecase' flag in regex
- implemented hex/octal/named constants - \x, \o, \c, \X, \O, \C
- added Unicode properties, such as <isL> <!isL> <+isL> <-isL> 
- added StrPos class (Pugs::Runtime::StrPos)
  #reverted - Match->from() and Match->to now return Pugs::Runtime::StrPos objects.
  - for non-OO positions, use Match->to_codes and Match->from_codes 
- fixed non-capturing subrules in regex
- fixed <-alpha>
- implemented conjunctions with '&' (not in Regex runtime yet)
- implemented negated metasyntax <!...>
- implemented <fail>

0.20  2006-10-13

- each time <prior> is set to a new rule, it stores the previous 
  rule in a closure, so that subrules can have their own <prior>.
- implemented :c :continue

- several fixes to HsBridge

0.19  2006-09-27

- removed dependency Data::Dump::Streamer (t/01-iterator_engine.t)
- updated Pugs::Runtime::Match pod
- $/{0} === $/[0]
- Match.kv, Match.elems, Match.chars, Match.yaml
- RegexPerl5 accepts parameters  i m s x 
- <! ...> takes a metasyntax expression (not a rule pattern)
- Regex wasn't allowed to match at end of string
- Regex runtime detects infinite loop in <null>+ and fails
- more detailed quantifier parsing;
  added '**{range}' quantifier (needs emitter support)

- HsBridge - implements a Pugs/Haskell-compatible API

[ features available inside v6.pm only ]

- refactored Rule grammar to use shortcuts, such as
    { return { after => :$$<rule>, } }
- fixed '${...}', '$[...]', ':$<...>', '$0'