@@ -1,3 +1,5 @@
+- token with non-greedy quantifier is transformed into a greedy quantifier
+  with lookahead:   a b*? c  ->  a [ <!before c> b ]* c
 - regex grammar: added <rule: string...> and <rule( params, ... ) syntax
 - new ast node 'call'
 - rules can have positional parameters
